# gpu-advisor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CRAWLER_GUIDE.md  Dockerfile  GPU_PURCHASE_ADVISOR_REPORT.md  README.md  architecture_spec.md  docker-compose.yml  feasibility_report.md  pyproject.toml  refactoring_plan.md  requirements.txt  run_all.sh  setup_cron.sh  simple_run.sh  종합_프로젝트_보고서.md
.antigravitycli/: 72fc5474-cade-45c0-9109-e17af079bdf7.json
.claude/: code-wiki-map.json  wiki-index.json
backend/: main.py  requirements.txt  run_release_daily.py  run_release_pipeline.py  run_release_ready.py  run_server.py  simple_server.py  test_agent_pipeline.py  test_gpu_purchase_advisor.py  train_alphazero.py  train_alphazero_v2.py  wiki_context.py
config/: crawler_config.json
crawlers/: auto_training.py  config_loader.py  danawa_crawler.py  exchange_rate_crawler.py  feature_engineer.py  http_cache.py  news_crawler.py  performance_monitor.py  release_report_fallback.py  retry_utils.py  run_daily.py  status_report.py  wiki_updater.py
docs/: AI_CODE_DEEP_DIVE.md  AI_COMPONENTS_AND_IMPLEMENTATION_KR.md  AUTO_TRAINING_WORKFLOW.md  AUTO_TRAINING_WORKFLOW_KR.md  FILE_GUIDE.md  FINAL_DEVELOPMENT_REPORT_KR.md  GLOSSARY.md  GLOSSARY_KR.md  HYPERPARAMETER_GUIDE.md  HYPERPARAMETER_GUIDE_KR.md  IMPLEMENTATION_GUIDE.md  INFERENCE_WALKTHROUGH.md  INFERENCE_WALKTHROUGH_KR.md  LLM_WIKI_적용_가이드.md  MCTS_WALKTHROUGH.md  MCTS_WALKTHROUGH_KR.md  NANO_AGENT_MANIFESTO_GPU_ADVISOR.md  POST_30D_NEXT_STEPS.md  POST_30D_NEXT_STEPS_KR.md  PROJECT_PRINCIPLES.md  (+10 more)
(+1122 files in other folders)
