[project]
name = "gpu-advisor"
version = "0.1.0"
description = "AlphaZero/MuZero-based GPU purchase timing advisor with MCTS planning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
]
production = [
    "psycopg[binary]>=3.2.0",
    "transformers>=4.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
